home vertical scrollbar mobile  fix

--- a/css/base.css
+++ b/css/base.css
@@ -105,7 +105,7 @@ main {
 	top: 0;
 	left: 0;
 	width: 100%;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .content {
